# unquec-ble

./: .envrc  .gitignore  Cargo.toml
ble/: Cargo.toml
ble/src/: main.rs
model/: Cargo.toml
model/examples/: decode.rs  encode.rs
model/src/: commands.rs  lib.rs  quec_ble_device.rs
model/src/ttlv/: decode.rs  encode.rs  mod.rs  model.rs
mqtt/: Cargo.toml
mqtt/src/: main.rs  server.rs
nix/: flake.nix
nix/pkgs/: binwalk-old.nix  binwalk.nix
