[package]
name = "unquec-ble"
edition = "2024"
version.workspace = true
authors.workspace = true
description.workspace = true

[lints]
workspace = true

[dependencies]
bluer = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
simple_logger = { workspace = true }
log = { workspace = true }
base64 = { workspace = true }
uuid = { workspace = true }
sha2 = { workspace = true }
unquec-model = { workspace = true }

[[bin]]
name = "ble"
path = "src/main.rs"
